# folio

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  folio_primary.plan.md  project-vocab.md  pyproject.toml
demos/: demo_full_results.json  hero_queries.json  hero_results.json
demos/cached_responses/: ask_260101e90dac41d3826c893530407d9f_what_is_the_cell_theory_.json  ask_4f0578ed69b54eb9953247a6aafbe594_give_me_the_important_points.json  ask_4f0578ed69b54eb9953247a6aafbe594_what_is_this_about_.json  ask_6f3645cc0c7744bdab9cd50962270d09_what_is_on_this_page_.json  ask_b2565f5356d24c97b084e5c3c6a61d99_what_is_the_cell_wall_made_of_.json  ask_b5184dc806e74b5dbba96bea6d3ac36b_what_is_the_cell_wall_made_of_.json  ask_demo_full_describe_the_diagram_that_shows_cell_structure_.json  ask_demo_full_how_do_plant_cells_differ_from_animal_cells_.json  ask_demo_full_what_happens_when_you_put_a_dried_raisin_in_water_.json  ask_demo_full_what_is_a_cell_.json  ask_demo_full_what_is_the_cell_membrane_made_of_and_what_does_it_do_.json  ask_demo_v2_what_are_ribosomes_.json  (+82 more)
docs/: architecture.md  hackathon-writeup.md  ui-decision-tree.md
folio/: __init__.py  api.py  ask.py  config.py  narrate.py  retrieve.py  schemas.py  tts.py  vision.py
scripts/: ngrok_tunnel.sh  process_pdf.py  pull_models.sh  run_local.sh  test_all.sh
tests/: conftest.py  test_api.py  test_ask.py  test_cross_device.py  test_headless.py  test_narrate.py  test_pdf_ingest.py  test_retrieve.py  test_vision.py
web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
(+18 files in other folders)
