[project]
name = "folio"
version = "0.1.0"
description = "Reads any book aloud, teaches what it sees — powered by Gemma 4"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.20",
    "pillow>=11.0",
    "pypdfium2>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
]
tts = [
    "piper-tts>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require Ollama running with gemma4:e4b",
]

[tool.ruff]
target-version = "py311"
line-length = 100
